@@ -6810,6 +6810,21 @@
     [(set (match_dup 0) (ashiftrt:SI (match_dup 0) (const_int 28)))
      (clobber (reg:CC CC_REGNUM))])])
 
+; Such patterns get directly emitted by noce_emit_store_flag.
+(define_insn_and_split "*cstorecc<mode>_z13"
+  [(set (match_operand:GPR  0 "register_operand"                "=&d")
+	(match_operator:GPR 1 "s390_comparison"
+			    [(match_operand 2 "cc_reg_operand"    "c")
+			     (match_operand 3 "const_int_operand"  "")]))]
+  "TARGET_Z13"
+  "#"
+  "reload_completed"
+  [(set (match_dup 0) (const_int 0))
+   (set (match_dup 0)
+	(if_then_else:GPR
+	 (match_op_dup 1 [(match_dup 2) (match_dup 3)])
+	 (const_int 1)
+	 (match_dup 0)))])
 
 ;;
 ;; - Conditional move instructions (introduced with z196)
